# audio_to_openrag

./: .env.example  .gitignore  LICENSE  PERFORMANCE_ANALYSIS.md  README.md  blog_post.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  REFACTORING_SUMMARY.md  TECHNOLOGY_STACK.md
examples/: .env.example  README.md  demo_docling.py  demo_full_pipeline.py  demo_openrag.py  demo_openrag_filters.py
examples/sample_files/: README.md
pipeline/: __init__.py  acquire.py  config.py  constants.py  diarize.py  document.py  ingest.py  logos.py  openrag_client.py  state.py  transcribe.py  utils.py
