[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-flow-pipeline"
version = "0.1.0"
description = "Podcast ingestion pipeline: YouTube → Docling ASR + Diarization → OpenRAG"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "yt-dlp>=2024.1.0",
    "docling[asr]>=2.74.0",
    "faster-whisper>=1.0.0",
    "pyannote.audio>=3.1.0",
    "torch>=2.0.0",
    "openrag-sdk>=0.1.3",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
the-flow = "main:cli"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]